k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sec-nac
  labels:
    app: sec-nac
  namespace: sec-nac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sec-nac
  template:
    metadata:
      labels:
        app: sec-nac
    spec:
      containers:
      - image: drumsergio/secciones-nacionalidades:1.2-arm32v7
        name: secciones-nacionalidades
        ports:
        - containerPort: 8080
