k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: sec-nac
  name: sec-nac-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: secnac.192.168.0.152.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: sec-nac
            servicePort: 8000
---
